--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.730.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.9",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.27",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "multer": "^1.4.2",
